--- a/pages/home.html
+++ b/pages/home.html
@@ -136,7 +136,7 @@
       <img src="../assets/icons/menu-svgrepo-com.svg" alt="logo" class="logo"> Menu
     </a>
 
-    <h1 class="title">Some Webpage</h1>
+    <h1 class="title">Some Webpage teste</h1>
     <div class="socialMenu">
       <a href="https://www.facebook.com/bernardo.seabra.756/" class="menuSocialIcons">
         <img src="../assets/icons/facebook-svgrepo-com (2).svg" alt="logo" class="logo">
