--- a/pages/home.html
+++ b/pages/home.html
@@ -2,139 +2,31 @@
 <html lang="pt-BR">
 
 <head>
-  <script>
-    // Variável global para armazenar as informações adicionadas
-    var informacoes = [];
-
-    function abrirMenu() {
-      document.getElementById("menu").style.height = "20rem";
-      document.addEventListener("click", fecharMenuForaDoMenu);
-    }
-
-    function fecharMenu() {
-      document.getElementById("menu").style.height = "2rem";
-      document.removeEventListener("click", fecharMenuForaDoMenu);
-    }
-
-    function fecharMenuForaDoMenu(event) {
-      var menu = document.getElementById("menu");
-      // Verifique se o clique ocorreu fora do menu
-      if (event.target != menu && !menu.contains(event.target)) {
-        fecharMenu();
-      }
-    }
-
-    function abrirModal(modalId) {
-      var modal = document.getElementById(modalId);
-      modal.style.display = "block";
-    }
-
-    function fecharModal(modalId) {
-      var modal = document.getElementById(modalId);
-      modal.style.display = "none";
-    }
-
-    function adicionarInformacao() {
-      var titulo = document.getElementById("titulo").value;
-      var data = document.getElementById("data").value;
-      var texto = document.getElementById("texto").value;
-
-      // Verificar se todos os campos estão preenchidos
-      if (titulo && data && texto) {
-        // Criar um novo elemento de post
-        var post = document.createElement("div");
-        post.className = "post";
-        post.setAttribute("data-titulo", titulo);
-        post.setAttribute("data-data", data);
-
-        var tituloElement = document.createElement("subtitle");
-        tituloElement.className = "titlePost";
-        tituloElement.innerText = titulo;
-
-        var dataElement = document.createElement("text");
-        dataElement.className = "dataPost";
-        dataElement.innerText = data;
-
-        var textoElement = document.createElement("text");
-        textoElement.innerText = texto;
-
-        // Criar um elemento de ícone de lixeira
-        var lixeiraIcon = document.createElement("img");
-        lixeiraIcon.src = "../assets/icons/bin-svgrepo-com.svg";
-        lixeiraIcon.className = "removePostIcon";
-        lixeiraIcon.alt = "Remover";
-
-
-        lixeiraIcon.addEventListener("click", function () {
-          // Remover o elemento post quando o ícone de lixeira for clicado
-          post.remove();
-        });
-
-        // Adicionar elementos ao post
-        post.appendChild(tituloElement);
-        post.appendChild(dataElement);
-        post.appendChild(textoElement);
-        post.appendChild(lixeiraIcon); // Adicionar o ícone de lixeira ao post
-
-        // Adicionar o novo post à página
-        var body = document.querySelector(".body");
-        body.appendChild(post);
-
-        // Limpar os campos de entrada
-        document.getElementById("titulo").value = "";
-        document.getElementById("data").value = "";
-        document.getElementById("texto").value = "";
-
-        // Fechar o modal
-        fecharModal("modal-add");
-      }
-    }
-
-    function pesquisarInformacoes() {
-      var termoPesquisa = document.getElementById("termo-pesquisa").value.toLowerCase();
-      var posts = document.querySelectorAll(".post");
-
-      posts.forEach(function (post) {
-        var titulo = post.getAttribute("data-titulo").toLowerCase();
-        var data = post.getAttribute("data-data").toLowerCase();
-
-        if (titulo.includes(termoPesquisa) || data.includes(termoPesquisa)) {
-          post.classList.remove("hidden");
-          post.classList.add("visible");
-        } else {
-          post.classList.remove("visible");
-          post.classList.add("hidden");
-        }
-      });
-    }
-    function removerPost() {
-      var lixeiraIcons = document.querySelectorAll(".removePostIcon");
-      lixeiraIcons.forEach(function (lixeiraIcon) {
-        lixeiraIcon.style.display = "inline";
-        lixeiraIcon.style.cursor = "pointer";
-      });
-    }
-
-  </script>
-
-
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home</title>
   <link rel="stylesheet" href="../style/Home.css">
+  <style>
+    /* Adicione estilos CSS conforme necessário */
+  </style>
 </head>
 
 <body>
   <header class="header">
-    <div class="menu-options">
-      <a href="javascript:void(0)" onclick="removerPost()">Remover</a>
-      <a href="javascript:void(0)" onclick="abrirModal('modal-add')">Adicionar</a>
-      <a href="javascript:void(0)" onclick="abrirModal('modal-search')">Pesquisar</a>
-    </div>
+    <ul class="menu-options">
+      <li class="menu-item">
+        <div class="menu-config">
+          <img src="../assets/icons/menu-svgrepo-com.svg" alt="logo" class="logo">
+          <a href="#" class="menu-title">Menu</a>
+        </div>
+        <ul class="submenu">
+          <li><a href="#" onclick="removerPost()">Remover</a></li>
+          <li><a href="#" onclick="abrirModal('modal-add')">Adicionar</a></li>
+          <li><a href="#" onclick="abrirModal('modal-search')">Pesquisar</a></li>
+        </ul>
+      </li>
+    </ul>
 
-    <a class="menu" id="menu" href="javascript:void(0)" onclick="abrirMenu()">
-      <img src="../assets/icons/menu-svgrepo-com.svg" alt="logo" class="logo"> Menu
-    </a>
 
     <h1 class="title">Some Webpage teste</h1>
     <div class="socialMenu">
@@ -160,36 +52,166 @@
     <!-- Conteúdo de posts aqui -->
   </div>
 
-  <div class="containerModal" id="modal">
-    <div id="modal-add" class="modal" style="display: none;">
+  <div class="containerModal" id="modal-add" style="display: none;">
+    <div class="modal">
       <h2>Adicionar Informação</h2>
       <form>
         <label for="titulo">Título:</label>
-        <input type="text" id="titulo" name="title" required>
+        <input type="text" id="titulo" name="titulo" required>
         <br>
 
         <label for="data">Data:</label>
         <input type="date" id="data" name="data" required><br>
 
         <label for="texto">Texto:</label>
-        <input type="text" id="texto" name="text" required><br>
+        <input type="text" id="texto" name="texto" required><br>
 
-        <button onclick="adicionarInformacao()">Adicionar</button>
-        <a href="javascript:void(0)" onclick="fecharModal('modal-add')">Fechar</a>
+        <button type="button" onclick="adicionarInformacao()">Adicionar</button>
+        <a href="#" onclick="fecharModal('modal-add')">Fechar</a>
       </form>
     </div>
   </div>
 
-  <div class="containerModal" id="modal">
-    <div id="modal-search" class="modal" style="display: none;">
+  <div class="containerModal" id="modal-search" style="display: none;">
+    <div class="modal">
       <h2>Pesquisar Informações</h2>
       <label for="termo-pesquisa">Título ou Data:</label>
       <input type="text" id="termo-pesquisa">
-      <button onclick="pesquisarInformacoes()">Pesquisar</button>
-      <a href="javascript:void(0)" onclick="fecharModal('modal-search')">Fechar</a>
+      <button type="button" onclick="pesquisarInformacoes()">Pesquisar</button>
+      <a href="#" onclick="fecharModal('modal-search')">Fechar</a>
     </div>
   </div>
 
+  <script>
+    var informacoes = [];
+
+    // Recupera informações do localStorage, se disponível
+    if (localStorage.getItem('informacoes')) {
+      informacoes = JSON.parse(localStorage.getItem('informacoes'));
+      exibirInformacoes();
+    }
+
+    function abrirMenu() {
+      var menu = document.getElementById("menu");
+      menu.style.height = "20rem";
+      document.addEventListener("click", fecharMenuForaDoMenu);
+    }
+
+    function fecharMenu() {
+      var menu = document.getElementById("menu");
+      menu.style.height = "2rem";
+      document.removeEventListener("click", fecharMenuForaDoMenu);
+    }
+
+    function fecharMenuForaDoMenu(event) {
+      var menu = document.getElementById("menu");
+      if (event.target !== menu && !menu.contains(event.target)) {
+        fecharMenu();
+      }
+    }
+
+    function abrirModal(modalId) {
+      var modal = document.getElementById(modalId);
+      modal.style.display = "flex";
+    }
+
+    function fecharModal(modalId) {
+      var modal = document.getElementById(modalId);
+      modal.style.display = "none";
+    }
+
+    function adicionarInformacao() {
+      var titulo = document.getElementById("titulo").value;
+      var data = document.getElementById("data").value;
+      var texto = document.getElementById("texto").value;
+
+      if (titulo && data && texto) {
+        var novaInformacao = {
+          titulo: titulo,
+          data: data,
+          texto: texto
+        };
+
+        informacoes.push(novaInformacao);
+
+        // Salva informações no localStorage
+        localStorage.setItem('informacoes', JSON.stringify(informacoes));
+
+        exibirInformacoes();
+
+        document.getElementById("titulo").value = "";
+        document.getElementById("data").value = "";
+        document.getElementById("texto").value = "";
+
+        fecharModal("modal-add");
+      }
+    }
+
+    function pesquisarInformacoes() {
+      var termoPesquisa = document.getElementById("termo-pesquisa").value.toLowerCase();
+      var posts = document.querySelectorAll(".post");
+
+      posts.forEach(function (post) {
+        var titulo = post.getAttribute("data-titulo").toLowerCase();
+        var data = post.getAttribute("data-data").toLowerCase();
+
+        if (titulo.includes(termoPesquisa) || data.includes(termoPesquisa)) {
+          post.style.display = "block";
+        } else {
+          post.style.display = "none";
+        }
+      });
+    }
+
+    function removerPost() {
+      var lixeiraIcons = document.querySelectorAll(".removePostIcon");
+      lixeiraIcons.forEach(function (lixeiraIcon) {
+        lixeiraIcon.style.display = "inline";
+        lixeiraIcon.style.cursor = "pointer";
+      });
+    }
+
+    function exibirInformacoes() {
+      var body = document.querySelector(".body");
+      body.innerHTML = "";
+
+      informacoes.forEach(function (info, index) {
+        var post = document.createElement("div");
+        post.className = "post";
+        post.setAttribute("data-titulo", info.titulo);
+        post.setAttribute("data-data", info.data);
+
+        var tituloElement = document.createElement("h3");
+        tituloElement.className = "titlePost";
+        tituloElement.innerText = info.titulo;
+
+        var dataElement = document.createElement("p");
+        dataElement.className = "dataPost";
+        dataElement.innerText = info.data;
+
+        var textoElement = document.createElement("p");
+        textoElement.innerText = info.texto;
+
+        var lixeiraIcon = document.createElement("img");
+        lixeiraIcon.src = "../assets/icons/bin-svgrepo-com.svg";
+        lixeiraIcon.className = "removePostIcon";
+        lixeiraIcon.alt = "Remover";
+
+        lixeiraIcon.addEventListener("click", function () {
+          informacoes.splice(index, 1);
+          localStorage.setItem('informacoes', JSON.stringify(informacoes));
+          exibirInformacoes();
+        });
+
+        post.appendChild(tituloElement);
+        post.appendChild(dataElement);
+        post.appendChild(textoElement);
+        post.appendChild(lixeiraIcon);
+
+        body.appendChild(post);
+      });
+    }
+  </script>
 </body>
 
 </html>
