--- a/pages/index.html
+++ b/pages/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home</title>
-  <link rel="stylesheet" href="../style/Home.css">
+  <link rel="stylesheet" href="../style/home.css">
   <style>
     /* Adicione estilos CSS conforme necessário */
   </style>
