--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home</title>
-  <link rel="stylesheet" href="/style/home.css">
+  <link rel="stylesheet" href="./assets/style/home.css">
   <style>
     /* Adicione estilos CSS conforme necessário */
   </style>
@@ -82,7 +82,7 @@
     </div>
   </div>
 
-  <script src="/javascript/home.js">
+  <script src="./assets/javascript/home.js">
 
   </script>
 </body>
