--- a/index.html
+++ b/index.html
@@ -33,16 +33,16 @@
       <a href="https://www.facebook.com/bernardo.seabra.756/" class="menuSocialIcons">
         <img src="../assets/icons/facebook-svgrepo-com (2).svg" alt="logo" class="logo">
       </a>
-      <a href="" class="menuSocialIcons">
+      <a href="https://twitter.com/" class="menuSocialIcons">
         <img src="../assets/icons/twitter.svg" alt="logo" class="logo">
       </a>
-      <a href="" class="menuSocialIcons">
+      <a href="https://www.instagram.com/beseabra2/" class="menuSocialIcons">
         <img src="../assets/icons/instagram-svgrepo-com.svg" alt="logo" class="menuSocialIcons">
       </a>
-      <a href="" class="menuSocialIcons">
+      <a href="https://github.com/beseabra/web" class="menuSocialIcons">
         <img src="../assets/icons/github-142-svgrepo-com.svg" alt="logo" class="logo">
       </a>
-      <a href="" class="menuSocialIcons">
+      <a href="https://www.linkedin.com/in/bernardo-seabra/" class="menuSocialIcons">
         <img src="../assets/icons/linkedin-161-svgrepo-com.svg" alt="logo" class="logo">
       </a>
     </div>
